Add test for reading resources

--- a/build.gradle
+++ b/build.gradle
@@ -8,5 +8,6 @@ repositories {
 }
 
 dependencies {
+    testCompile group: 'com.google.guava', name: 'guava', version: '19.0'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-2'
 }
